# mini_pos

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  analyze.py  app.py  config.json  pyproject.toml  run.py
examples/: neuhauser-abend.json
mini_pos/: __init__.py  analyze.py  app.py  confcheck.py  config.py  helpers.py  log.py  models.py  query.py  routes.py  settings.py
mini_pos/routes/: __init__.py  bar.py  fetch.py  home.py  service.py
mini_pos/static/css/: bar.css  general.css  index.css  service.css  service_login.css  service_table.css
mini_pos/static/js/: bar.js  service_table.js
mini_pos/templates/: _base.html  bar.html  bar_body.html  bar_history.html  bar_selection.html  index.html  service.html  service_login.html  service_table.html  service_table_history.html  service_table_overview.html
static/css/: bar.css  index.css  service.css  service_table.css
static/js/: bar.js  service.js  service_table.js
templates/: admin.html  bar.html  bar_body.html  service.html  service_table.html
tests/: conftest.py  test_config.py  test_order.py  test_routes.py
